--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1029 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+:root {
+  font-size: 14px;
+  --color-button-text: #fff;
+  --color-primary-100: #dee3ea;
+  --color-primary-200: #b2bdcd;
+  --color-primary-300: #5d7290;
+  --color-primary-600: #323d4d;
+  --color-primary-700: #242c37;
+  --color-primary-800: #151a21;
+  --color-primary-900: #0b0e11;
+  --color-secondary-washed-out: #879eed;
+  --color-secondary: #5575e7;
+  --color-accent-glow: rgba(253, 77, 77, 0.3);
+  --color-accent: #fd4d4d;
+  --color-accent-hover: #fd6868;
+  --color-accent-disabled: #f5bfbf;
+  --screen-height-reduction: 0px;
+  --color-primary-100-translucent: rgba(222, 227, 234, 0.15);
+  --border-radius: 8px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: var(--color-button-text);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-color: var(--color-primary-900);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-wrapper {
+  width: 100vw;
+}
+
+.app-title {
+  font-size: 30px;
+  margin-left: 15px;
+  color: var(--color-accent);
+}
+
+.logo-wrapper:hover {
+  background-color: var(--color-primary-700);
+}
+
+.logo-wrapper {
+  padding: 7px 20px;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: var(--border-radius);
+}
+
+.logo {
+  width: 36px;
+  height: 36px;
+}
+
+.avatar:hover {
+  filter: brightness(1.2);
+}
+
+.nav {
+  position: sticky;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+  height: 15vh;
+}
+
+.nav-left,
+.nav-center,
+.nav-right {
+  width: 33%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-center .nav-item {
+  padding: 0;
+}
+
+.nav-left .nav-item {
+  justify-content: flex-start;
+}
+
+.nav-right .nav-item {
+  justify-content: flex-end;
+}
+
+.nav-item {
+  width: 100%;
+  padding: 20px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-right .nav-item img {
+  width: 50px;
+  height: 50px;
+}
+
+.rounded {
+  border-radius: 50%;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+}
+
+.search-input {
+  background-color: var(--color-primary-700);
+  border: none;
+  padding: 15px 25px;
+  border-top-right-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+  width: 90%;
+  color: var(--color-button-text);
+  outline: none;
+}
+
+::placeholder {
+  color: var(--color-primary-300);
+}
+
+.search-icon {
+  background-color: var(--color-primary-700);
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 0;
+  border-top-left-radius: var(--border-radius);
+  border-bottom-left-radius: var(--border-radius);
+}
+
+.loupe {
+  fill: var(--color-primary-300);
+  width: 16px;
+  height: 16px;
+}
+
+.body {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  height: 85vh;
+}
+
+.body-left,
+.body-center,
+.body-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.body-right {
+  justify-content: flex-start;
+  align-items: flex-end;
   flex-direction: column;
+  width: 25%;
+}
+
+.body-left {
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 25%;
+}
+
+.body-center {
+  width: 50%;
+}
+
+.profile-card {
+  background-color: var(--color-primary-800);
+  border-radius: var(--border-radius);
+  padding: 20px 30px;
+  width: 350px;
+}
+
+.profile-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.profile-pic {
+  width: 80px;
+  height: 80px;
+}
+
+.profile-user {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 5px 10px;
+}
+
+.profile-name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 3px;
+  word-break: break-all;
+}
+
+.profile-username {
+  font-size: 14px;
+  color: var(--color-primary-300);
+}
+
+.profile-pop {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 10px;
+}
+
+.followers,
+.following {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px 10px;
+  border-radius: var(--border-radius);
+}
+
+.followers:hover,
+.following:hover {
+  background-color: var(--color-primary-600);
+}
+
+.followers span,
+.following span {
+  color: var(--color-primary-300);
+  margin-left: 5px;
+}
+
+.feed {
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+}
+
+.body-center ::-webkit-scrollbar {
+  display: none;
+}
+
+.feed ::-webkit-scrollbar {
+  display: none;
+}
+
+.feed-main ::-webkit-scrollbar {
+  display: none;
+}
+
+.feed-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  height: 8%;
+}
+
+.feed-main {
+  overflow-y: scroll;
+  height: 90%;
+}
+
+.feed-title {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.create-post-button {
+  background-color: var(--color-accent);
+  border: none;
+  border-radius: var(--border-radius);
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+.create-post-button:hover {
+  filter: brightness(1.3);
+}
+
+.post {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 75%;
+  background-color: var(--color-primary-800);
+  border-radius: var(--border-radius);
+  margin-bottom: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.post-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.post-owner {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  padding: 5px 10px;
+}
+
+.post-date {
+  color: var(--color-primary-300);
+  font-size: 12px;
+  margin-left: 10px;
+}
+
+.post-owner:hover {
+  background-color: var(--color-primary-700);
+  border-radius: var(--border-radius);
+}
+
+.post-owner-name {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.post-options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.post-options:hover {
+  background-color: var(--color-primary-700);
+}
+
+.post-options svg {
+  fill: white;
+  width: 16px;
+  height: 16px;
+}
+
+.post-content {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 5px 15px;
+  word-break: break-all;
+}
+
+.post-image {
+  height: auto;
+  max-width: 100%;
+  max-height: 80vh;
+}
+
+.post-image-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post-text {
+  font-size: 14px;
+  color: var(--color-primary-100);
+  margin-bottom: 10px;
+}
+
+.post-actions {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
+}
+
+.like-button,
+.comment-button {
+  width: 50%;
+  background-color: transparent;
+  border: none;
+  padding: 10px 20px;
+  border-radius: var(--border-radius);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.like-button svg,
+.comment-button svg {
+  fill: white;
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+}
+
+.like-button:hover,
+.comment-button:hover {
+  background-color: var(--color-primary-700);
+}
+
+.post-comments {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.comment-input-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.comment-input-owner {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.comment-input-wrapper {
+  width: 100%;
+  padding-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment-input-wrapper form {
+  width: 100%;
+}
+
+.comment-input {
+  background-color: var(--color-primary-700);
+  border: none;
+  border-radius: 8px;
+  padding: 10px 10px;
+  width: 100%;
+  outline: none;
+}
+
+.comment-input-wrapper svg {
+  width: 20px;
+  height: 20px;
+  fill: var(--color-primary-300);
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.comment-input-wrapper svg:hover {
+  filter: brightness(1.3);
+}
+
+.comment {
+  display: flex;
+
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  padding: 10px 5px;
+  border-radius: 8px;
+}
+
+.comment:hover {
+  background-color: var(--color-primary-600);
+}
+
+.comment-top {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.comment-owner {
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.comment-owner::after {
+  content: "•";
+  color: var(--color-primary-300);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.comment-timestamp {
+  font-size: 12px;
+  color: var(--color-primary-300);
+}
+
+.comment-content {
+  margin-left: 10px;
+}
+
+.comment-body {
+  font-size: 14px;
+  color: var(--color-primary-100);
+}
+
+.comment-actions {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.comment-like,
+.comment-reply {
+  color: var(--color-primary-300);
+  cursor: pointer;
+}
+
+.comment-like:hover,
+.comment-reply:hover {
+  filter: brightness(1.5);
+}
+
+.comment-like {
+  margin-right: 8px;
+}
+
+.friends-list {
+  overflow-y: scroll;
+  max-height: 65vh;
+}
+
+.friends-card ::-webkit-scrollbar {
+  display: none;
+}
+
+.friends-title {
+  font-weight: bold;
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.friends-online {
+  color: var(--color-primary-300);
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.friend {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-bottom: 10px;
+  padding: 15px 10px;
+  border-radius: 8px;
+  width: 100%;
+}
+
+.friend:hover {
+  background-color: var(--color-primary-700);
+}
+
+.friend-avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.friend-name {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.friend-profile {
+  border-radius: 50%;
+  background-image: url("https://avatars.githubusercontent.com/u/62263505?v=4");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 45px;
+  width: 45px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.friend-profile svg {
+  fill: limegreen;
+  height: 8px;
+  width: 8px;
+}
+
+.trending {
+  background-color: var(--color-primary-800);
+  border-radius: var(--border-radius);
+  padding: 10px;
+  margin-top: 25px;
+  width: 350px;
+  max-height: 350px;
+}
+
+.trending ::-webkit-scrollbar {
+  display: none;
+}
+
+.trending-title {
+  font-weight: bold;
+  font-size: 22px;
+  padding: 10px;
+  border-bottom: 1px solid var(--color-primary-600);
+  margin-bottom: 10px;
+}
+
+.trending-list {
+  overflow-y: scroll;
+  height: 80%;
+}
+
+.popular-post {
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.popular-post:hover {
+  background-color: var(--color-primary-600);
+  border-radius: var(--border-radius);
+}
+
+.popular-post-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popular-post-owner-avatar {
+  background-image: url("https://avatars.githubusercontent.com/u/62263505?v=4");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+}
+
+.popular-post-owner-name {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.popular-post-owner {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.popular-post-description {
+  word-break: break-all;
+  margin-top: 10px;
+  color: var(--color-primary-300);
+}
+
+.popular-post-actions {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.popular-post-likes,
+.popular-post-comments {
+  color: var(--color-accent);
+  margin-right: 5px;
+}
+
+.popular-post-likes svg,
+.popular-post-comments svg {
+  fill: var(--color-accent);
+  height: 10px;
+  width: 10px;
+}
+
+input[type="file"] { 
+  opacity: 0; 
+  z-index: -1; 
+  position: absolute;
+}
+
+.create-post-wrapper {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(1, 1, 1, 0.7);
 }
 
-.App-link {
-  color: #61dafb;
+.create-post-modal {
+  width: 40%;
+  height: 50%;
+  background-color: var(--color-primary-800);
+  border-radius: 8px;
+  padding: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.create-post-cancel {
+  border-radius: 50%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.create-post-cancel:hover {
+  background-color: var(--color-primary-700);
+}
+
+.create-post-top {
+  width: 100%;
+  display: flex;
+}
+
+.create-post-center {
+  height: 80%;
+  width: 100%;
+  padding-top: 10px;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+.create-post-top {
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.create-post-top svg {
+  fill: white;
+  height: 15px;
+  width: 15px;
+}
+
+.create-post-textarea {
+  resize: none;
+  width: 100%;
+  height: 50%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.create-post-textarea:focus {
+  background-color: var(--color-primary-600);
+}
+
+.create-post-actions {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 15%;
+}
+
+.create-post-actions svg {
+  width: 30px;
+  height: 30px;
+  fill: var(--color-primary-300);
+  cursor: pointer;
+  margin-left: 15px;
+}
+
+.create-post-actions svg:hover {
+  filter: brightness(1.5);
+}
+
+.create-post-submit {
+  background-color: var(--color-accent);
+  border: none;
+  border-radius: var(--border-radius);
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.create-post-submit:hover {
+  filter: brightness(1.3);
+}
+
+.create-post-bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.create-post-uploads{
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+}
+
+.create-post-image{
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  max-width: 23%;
+  float: left;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.create-post-image svg{
+  fill: white;
+  width: 13px;
+  height: 13px;
+}
+
+.create-post-image-delete{
+  position: absolute;
+  top:0px;
+  right: 0px;
+  border-radius: 50%;
+  background-color: var(--color-primary-700);
+  padding: 6px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.create-post-image:hover .create-post-image-delete{
+  display: flex;
+}
+
+.create-post-image img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.emoji-picker {
+  position: relative;
+}
+
+.emoji-picker-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.emoji-picker-button svg {
+  fill: var(--color-primary-300);
+  height: 20px;
+  width: 20px;
+}
+
+.emoji-picker-wrapper {
+  position: absolute;
+  z-index: 999;
+  bottom: 180%;
+  left: 50%;
+  background-color: var(--color-primary-600);
+  width: 250px;
+  margin-left: -125px;
+  border-radius: 8px;
+  padding: 10px;
+  font-size: 12px;
+}
+
+.emoji-picker-wrapper::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-width: 10px;
+  border-style: solid;
+  border-color: var(--color-primary-600) transparent transparent transparent;
+  top: 256px;
+  left: 120px;
+}
+
+.emoji-picker-wrapper input {
+  background-color: var(--color-primary-700);
+  padding: 5px 10px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+}
+
+.emoji-picker-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.emoji-picker-list {
+  height: 200px;
+  overflow-y: scroll;
+  margin-top: 10px;
+  font-size: 20px;
+  width: 100%;
+}
+
+.emoji-category {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.emoji-category-name {
+  font-size: 12px;
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+.emoji-category-list {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(auto-fill, 1fr);
+}
+
+.emoji-category-list .emoji {
+  width: 46px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: left;
+}
+
+@media screen and (max-width: 600px) {
+  .body-left,
+  .body-right {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+
+  .body-center {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1700px) {
+  .body {
+    width: 100%;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
+
+@media screen and (max-width: 1525px) {
+  .body-right {
+    display: none;
+  }
+
+  .body-left {
+    width: 30%;
+  }
+
+  .body-center {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .post {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .body-left {
+    display: none;
+  }
+
+  .body-center {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .body-center {
+    width: 90%;
   }
 }
